# Pratta_Exercises

./: .gitignore  README.md
Chapter 2/Exercises/Exercise_2.02/: CMakeLists.txt
Chapter 2/Exercises/Exercise_2.03/: CMakeLists.txt  main.c
Chapter 2/Exercises/Exercise_2.04/: jolly.c
Chapter 2/Exercises/Exercise_2.06/: CMakeLists.txt  toes.c
Chapter 2/Exercises/Exercise_2.07/: CMakeLists.txt  main.c
Chapter 2/Exersize_2/Exersize_2.2/: main.c
Chapter 2/Exersize_2/Exersize_2.4/: CMakeLists.txt
Chapter 2/Exersize_2/Exersize_2.8/: CMakeLists.txt
Chapter 2/Exersizes/Exersize_2.01/: CMakeLists.txt  main.c
Chapter 2/Exersizes/Exersize_2.05/: CMakeLists.txt  countries.c
Chapter 2/Exersizes/Exersize_2.08/: three.c
Chapter 2/Listing_1/Listing_1.1/: main.c
Chapter 2/Listing_1/Listing_1.2/: CMakeLists.txt
Chapter 2/Listing_2/Listing_2.1/: CMakeLists.txt  main.c
Chapter 2/Listing_2/Listing_2.2/: fathm_ft.c
Chapter 2/Listing_2/Listing_2.3/: CMakeLists.txt  two_func.c
Chapter 2/Listings/Listing_1.01/: CMakeLists.txt
Chapter 2/Listings/Listing_1.02/: main.c
Chapter 2/Listings/Listing_2.02/: CMakeLists.txt
Chapter 3/Exercises/Exercise_3.01/: CMakeLists.txt
Chapter 3/Exercises/Exercise_3.02/: CMakeLists.txt
Chapter 3/Exercises/Exercise_3.04/: CMakeLists.txt  float_for_print.c
Chapter 3/Exercises/Exercise_3.05/: CMakeLists.txt
Chapter 3/Exercises/Exercise_3.06/: H2O_molecule.c
Chapter 3/Exercises/Exercise_3.07/: centimeters_to_inches.c
Chapter 3/Listings/Listing_3.04/: CMakeLists.txt
Listing_1/Listing_1.1/: .gitignore  main.c
(+196 files in other folders)
